--- a/DattingApp.API/appsettings.json
+++ b/DattingApp.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings":{
+    "Token":"supper secret key"
+  },
  
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=salim1;Trusted_Connection=True;MultipleActiveResultSets=true"
